<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/cl_main"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout android:id="@+id/rl_board"
        android:layout_width="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/frag1"
            android:name="com.moshe.glaz.sudoku.ui.fragments.HeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="130dp" />
    </RelativeLayout>

    <LinearLayout android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/layout_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_board">

        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/title_activity_login"
            android:padding="2dp"
            android:textColor="@color/gray_dark"
            android:layout_marginBottom="@dimen/login_field_margin"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/et_userName"
            android:layout_width="@dimen/login_field_width"
            android:drawableLeft="@drawable/ic_round_account_circle_24"
            android:hint="@string/user_name"
            android:inputType="text|textPersonName"
            android:text=""
            android:padding="@dimen/login_field_padding"
            android:layout_height="@dimen/login_field_height"
            android:layout_margin="@dimen/login_field_margin" />

        <EditText android:id="@+id/et_password"
            android:layout_width="@dimen/login_field_width"
            android:layout_height="@dimen/login_field_height"
            android:inputType="numberSigned"
            android:padding="@dimen/login_field_padding"
            android:text=""
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_baseline_offline_pin_24"
            android:layout_margin="@dimen/login_field_margin" />

        <TextView style="@style/MyButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_field_height"
            android:onClick="onLoginClick"
             android:text="@string/login"  />
    </LinearLayout>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="onRegistrationClick"
        android:textColor="@drawable/text_color"
        android:padding="@dimen/login_field_padding"
        android:textStyle="bold"
        android:text="@string/go_to_registration"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>