<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

 <androidx.constraintlayout.widget.ConstraintLayout
     app:layout_constraintTop_toTopOf="parent"
     android:layout_width="match_parent"
     android:background="@color/gray_dark"
     android:paddingEnd="10dp"
     android:paddingStart="4dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"

     android:id="@+id/ll_main"
     android:layout_height="wrap_content">

  <TextView android:id="@+id/tv_location"
      android:layout_width="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/iv_icon"
      android:paddingStart="@dimen/profile_text_padding"
      android:text=""
      android:visibility="gone"
      android:textSize="@dimen/text_size_1"
      android:textColor="@color/orange_light"
      android:layout_height="wrap_content"/>

  <ImageView android:id="@+id/iv_icon"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:onClick="onAvatarClick"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:padding="4dp"
      android:src="@drawable/avatars_freebie_svg_0" />

  <TextView android:id="@+id/tv_nickName"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toEndOf="@id/iv_icon"
      android:paddingStart="@dimen/profile_text_padding"
      android:text="משה גלזמן"
      android:textSize="@dimen/text_size_4"
      android:layout_width="wrap_content"
      android:textColor="@color/text_color_white"
      android:layout_height="wrap_content"/>

  <TextView android:id="@+id/tv_description"
      app:layout_constraintTop_toBottomOf="@id/tv_nickName"
      app:layout_constraintStart_toEndOf="@id/iv_icon"
      android:paddingStart="@dimen/profile_text_padding"
      android:text="משה גלזמן"
      android:textSize="@dimen/text_size_2"
      android:layout_width="wrap_content"
      android:textColor="@color/text_color_white"
      android:layout_height="wrap_content"/>

  <TextView android:id="@+id/tv_date"
      app:layout_constraintTop_toBottomOf="@id/tv_description"
      app:layout_constraintStart_toEndOf="@id/iv_icon"
      android:paddingStart="@dimen/profile_text_padding"
      android:text="מחובר מ12/05/2020"
      android:textSize="@dimen/text_size_2"
      android:layout_width="wrap_content"
      android:textColor="@color/text_color_white"
      android:layout_height="wrap_content"/>

  <TextView android:id="@+id/tv_status_1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/tv_status_2"
      android:gravity="center|start"
      android:padding="4dp"
      android:background="@drawable/border_white_style_2"
      android:text="@string/games_count"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_width="100dp"
      android:textSize="@dimen/text_size_1"
      android:textColor="@color/text_color_white"
      android:layout_height="0dp"/>
  <TextView android:id="@+id/tv_status_2"
      app:layout_constraintTop_toBottomOf="@id/tv_status_1"
      android:padding="4dp"
      android:gravity="center|start"
      android:layout_marginTop="1dp"
      android:text="@string/games_count_win"
      android:background="@drawable/border_white_style_3"
      app:layout_constraintBottom_toTopOf="@id/tv_status_3"
      app:layout_constraintEnd_toEndOf="parent"
      android:textSize="@dimen/text_size_1"
      android:layout_width="100dp"
      android:textColor="@color/text_color_white"
      android:layout_height="0dp"/>
  <TextView android:id="@+id/tv_status_3"
      app:layout_constraintTop_toBottomOf="@id/tv_status_2"
      android:layout_marginTop="1dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:gravity="center|start"
      android:text="@string/games_count_lose"
      android:padding="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:background="@drawable/border_white_style_1"
      android:textSize="@dimen/text_size_1"
      android:layout_width="100dp"
      android:textColor="@color/text_color_white"
      android:layout_height="0dp"/>

  <TextView android:id="@+id/tv_status_result_1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/tv_status_2"
      app:layout_constraintEnd_toEndOf="parent"
      android:textColor="@color/text_color_white"
      android:paddingEnd="4dp"
      android:text="12"
      android:textSize="@dimen/text_size_2"
      android:layout_width="wrap_content"
      android:gravity="center"
      android:layout_height="0dp"/>
  <TextView android:id="@+id/tv_status_result_2"
      app:layout_constraintTop_toBottomOf="@id/tv_status_1"
      app:layout_constraintBottom_toTopOf="@id/tv_status_3"
      app:layout_constraintEnd_toEndOf="parent"
      android:gravity="center"
      android:textColor="@color/text_color_white"
      android:paddingEnd="4dp"
      android:text="12"
      android:textSize="@dimen/text_size_2"
      android:layout_width="wrap_content"
      android:layout_height="0dp"/>
  <TextView android:id="@+id/tv_status_result_3"
      app:layout_constraintTop_toBottomOf="@id/tv_status_2"
      android:gravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:textColor="@color/text_color_white"
      android:paddingEnd="4dp"
      android:text="12"
      android:textSize="@dimen/text_size_2"
      android:layout_width="wrap_content"
      android:layout_height="0dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>

 <ListView android:id="@+id/lv_games"
     app:layout_constraintTop_toBottomOf="@id/ll_main"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     android:layout_margin="10dp"
     android:dividerHeight="4dp"
     android:divider="#00000000"
     app:layout_constraintBottom_toTopOf="@id/btn_history"
     android:layout_width="0dp"
     android:layout_height="0dp"/>

 <ImageView android:id="@+id/btn_add"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/btn_history"
     android:src="@drawable/ic_baseline_add_white_24"
     android:gravity="center"
     android:paddingEnd="14dp"
     android:paddingStart="16dp"
     android:paddingBottom="14dp"
     android:paddingTop="16dp"
     android:onClick="onAddClick"
     android:background="@drawable/button_gray_bar"
     android:layout_width="80dp"
     android:layout_height="80dp"/>

  <TextView android:id="@+id/btn_history"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/btn_add"
      app:layout_constraintStart_toEndOf="@id/btn_users"
      android:gravity="center"
      android:textSize="@dimen/text_size_1"
      android:text="@string/history"
      android:textColor="@color/text_color_white"
      android:onClick="onHistoryClick"
      android:background="@drawable/button_gray_bar"
      android:layout_width="0dp"
      android:layout_height="46dp"/>

 <TextView android:id="@+id/btn_users"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/btn_history"
     app:layout_constraintStart_toEndOf="@id/btn_about"
     android:gravity="center"
     android:textSize="@dimen/text_size_1"
     android:text="@string/users"
     android:textColor="@color/text_color_white"
     android:onClick="onUsersClick"
     android:background="@drawable/button_gray_bar"
     android:layout_width="0dp"
     android:layout_height="46dp"/>

 <TextView android:id="@+id/btn_about"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/btn_users"
     app:layout_constraintStart_toStartOf="parent"
     android:gravity="center"
     android:textSize="@dimen/text_size_1"
     android:text="@string/about"
     android:textColor="@color/text_color_white"
     android:onClick="onAboutClick"
     android:background="@drawable/button_gray_bar"
     android:layout_width="0dp"
     android:layout_height="46dp"/>

 <View android:id="@+id/line_1"
     android:layout_width="0dp"
     android:layout_height="1dp"
     android:background="@color/gray"
     app:layout_constraintStart_toStartOf="@id/btn_add"
     app:layout_constraintEnd_toEndOf="@id/btn_add"
     android:layout_marginTop="2dp"
     android:layout_marginStart="2dp"
     app:layout_constraintTop_toTopOf="@id/btn_add"
     />
 <View android:id="@+id/line_2"
     android:layout_width="1dp"
     android:layout_height="34dp"
     android:background="@color/gray"
     app:layout_constraintStart_toStartOf="@id/line_1"
     app:layout_constraintTop_toTopOf="@id/line_1"

     />
 <View
     android:layout_width="0dp"
     android:layout_height="1dp"
     android:background="@color/gray"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/line_2"
     app:layout_constraintEnd_toEndOf="@id/line_2"
     />

 <View
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/btn_history"
     android:layout_width="1dp"
     android:layout_marginBottom="3dp"
     android:background="@color/gray"
     android:layout_height="38dp"/>
 <View
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/btn_users"
     android:layout_width="1dp"
     android:layout_marginBottom="3dp"
     android:background="@color/gray"
     android:layout_height="38dp"/>
 <View
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/btn_add"
     android:layout_width="1dp"
     android:layout_marginBottom="3dp"
     android:background="@color/gray"
     android:layout_height="38dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>