<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    android:background="#e8e8e8"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView android:id="@+id/iv_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onAvatarClick"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:padding="4dp"
        android:src="@drawable/avatars_freebie_svg_0" />

    <TextView android:id="@+id/tv_location"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        android:paddingStart="@dimen/profile_text_padding"
        android:text=""
        android:textSize="@dimen/text_size_1"
        android:textColor="@color/orange_dark"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tv_nickName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        android:paddingStart="@dimen/profile_text_padding"
        android:text="משה גלזמן"
        android:textSize="@dimen/text_size_4"
        android:layout_width="wrap_content"
        android:textColor="@drawable/text_color"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_nickName"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        android:paddingStart="@dimen/profile_text_padding"
        android:text="משה גלזמן"
        android:textSize="@dimen/text_size_2"
        android:layout_width="wrap_content"
        android:textColor="@drawable/text_color"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        android:paddingStart="@dimen/profile_text_padding"
        android:text="מחובר מ12/05/2020"
        android:textSize="@dimen/text_size_2"
        android:layout_width="wrap_content"
        android:textColor="@drawable/text_color"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tv_status_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_status_2"
        android:gravity="center|start"
        android:padding="4dp"
        android:background="@drawable/border_dark_style_2"
        android:text="@string/games_count"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:textSize="@dimen/text_size_1"
        android:textColor="@drawable/text_color"
        android:layout_height="0dp"/>
    <TextView android:id="@+id/tv_status_2"
        app:layout_constraintTop_toBottomOf="@id/tv_status_1"
        android:padding="4dp"
        android:gravity="center|start"
        android:layout_marginTop="1dp"
        android:text="@string/games_count_win"
        android:background="@drawable/border_dark_style_3"
        app:layout_constraintBottom_toTopOf="@id/tv_status_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_size_1"
        android:layout_width="100dp"
        android:textColor="@drawable/text_color"
        android:layout_height="0dp"/>
    <TextView android:id="@+id/tv_status_3"
        app:layout_constraintTop_toBottomOf="@id/tv_status_2"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        android:gravity="center|start"
        android:text="@string/games_count_lose"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_dark_style_1"
        android:textSize="@dimen/text_size_1"
        android:layout_width="100dp"
        android:textColor="@drawable/text_color"
        android:layout_height="0dp"/>

    <TextView android:id="@+id/tv_status_result_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_status_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@drawable/text_color"
        android:paddingEnd="4dp"
        android:text="12"
        android:textSize="@dimen/text_size_2"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="0dp"/>
    <TextView android:id="@+id/tv_status_result_2"
        app:layout_constraintTop_toBottomOf="@id/tv_status_1"
        app:layout_constraintBottom_toTopOf="@id/tv_status_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@drawable/text_color"
        android:paddingEnd="4dp"
        android:text="12"
        android:textSize="@dimen/text_size_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>
    <TextView android:id="@+id/tv_status_result_3"
        app:layout_constraintTop_toBottomOf="@id/tv_status_2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        android:textColor="@drawable/text_color"
        android:paddingEnd="4dp"
        android:text="12"
        android:textSize="@dimen/text_size_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>